# sbdb

./: AUS_bolt.json  LICENSE  README.md  example1_generate_object_set.py  mkdocs.yml  pyproject.toml  requirements.txt  sbdb.py  test_sbdb_core.py
examples/: AUS_bolt_library.csv  example1_generate_object_set.py  example1_simple_beam.csv  example1_simple_beam.py  example2_AUS_bolt_library.csv  example2_generate_object_set.py
src/sbdb/: __init__.py  sbdb.py  sets.py
src/sbdb/database/: __init__.py  connection.py  population.py  utils.py
src/sbdb/tracking/: __init__.py  dataset_tracker.py
