[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sbdb"
version = "0.1.0"
authors = [
  { name="Joe Gattas", email="j.gattas@uq.edu.au" },
  { name="Yuyu Wang", email="yuyu.wang@uq.net.au"},
]
description = "sbdb is a Python toolbox for set-based and database-driven structural design automation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["AS4100", "steel structures", "structural engineering"]
dependencies = [
    "numpy>=1.25.0",
    "pandas>=2.0.2"
]

[project.urls]
"Homepage" = "https://github.com/Folded-Structures-Lab/sbdb"

