[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbdb"
version = "0.1.1"
description = "Set-Based Database: A framework for generalised set-based structural design"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Yuyu Wang", email = "yuyu.wang@uq.edu.au"},
    {name = "Joe Gattas", email = "j.gattas@uq.edu.au"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "pymongo>=4.0.0",
    "ssh-pymongo>=0.3.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/sbdb"
Repository = "https://github.com/yourusername/sbdb"
Documentation = "https://github.com/yourusername/sbdb#readme"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
